k8s-deployment-proweb-bc-uat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proweb-bc-uat
  namespace: proweb-bc-uat-ns
  labels:
    app: proweb-bc-uat
    Environment: UAT
    Owner: DigitalChannels
    ProjectName: bisneycrest
spec:
  replicas: 1
  strategy:
   type: RollingUpdate
   rollingUpdate:
     maxUnavailable: 0
  selector:
    matchLabels:
      app: proweb-bc-uat
  template:
    metadata:
      annotations:
        k8s.aliyun.com/eci-sls-enable: "true"
        k8s.aliyun.com/acr-service-arns: "acs:ram::5725926127090411:role/k8s-uat-acr-access"
      labels:
        app: proweb-bc-uat
    spec:
      containers:
      - name: proweb-bc-uat
        # image: registry.cn-hangzhou.aliyuncs.com/acs-sample/nginxdemos:latest
        image: proweb-acr-registry-vpc.cn-hongkong.cr.aliyuncs.com/proweb-uat/proweb-bc-uat-acr-repo:latest
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "1024Mi"  # Initial memory request
            cpu: "256m"       # Initial CPU request
          limits:
            memory: "1024Mi"  # Maximum memory allowed
            cpu: "256m"       # Maximum CPU allowed
        volumeMounts:
        - name: proweb-bc-uat-oss-pvc
          mountPath: "/var/bisneycrest/public_html/upload"
        # - name: proweb-bc-uat-nas-pvc
        #   mountPath: "/var/bisneycrest/public_html/upload"
      volumes:
      - name: proweb-bc-uat-oss-pvc
        persistentVolumeClaim:
          claimName: proweb-bc-uat-oss-pvc
      # - name: proweb-bc-uat-nas-pvc
      #   persistentVolumeClaim:
      #     claimName: proweb-bc-uat-nas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: proweb-bc-uat-service
  namespace: proweb-bc-uat-ns
  labels:
    app: proweb-bc-uat-service
spec:
  selector:
    app: proweb-bc-uat
  sessionAffinity: None
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proweb-bc-uat-ingress
  namespace: proweb-bc-uat-ns
  labels:
    ingress: proweb-bc-uat-ingress
  # annotations:
  #   alb.ingress.kubernetes.io/healthcheck-enabled: "true"
  #   alb.ingress.kubernetes.io/healthcheck-path: "/"
  #   alb.ingress.kubernetes.io/healthcheck-protocol: "HTTP"
  #   alb.ingress.kubernetes.io/healthcheck-method: "HEAD"
  #   alb.ingress.kubernetes.io/healthcheck-httpcode: "http_2xx"
  #   alb.ingress.kubernetes.io/healthcheck-timeout-seconds: "5"
  #   alb.ingress.kubernetes.io/healthcheck-interval-seconds: "2"
  #   alb.ingress.kubernetes.io/healthy-threshold-count: "3"
  #   alb.ingress.kubernetes.io/unhealthy-threshold-count: "3"
spec:
  ingressClassName: k8s-alb-https
  rules:
    - host: www-sit.bisneycrest.com.hk
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proweb-bc-uat-service
              port:
                number: 80
  tls:
  - hosts: 
    - www-sit.bisneycrest.com.hk
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-any-any
  namespace: proweb-bc-uat-ns
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
    - {}
